public_html/documentation/styles.css
#form {
    max-width: 25rem;

}




#expIcons {
    max-height: 5rem;
    margin: 0 auto 0 auto;
    display: block;

}

#portThumb {
    max-height: 8rem;
    max-width: auto;
    margin: 0 auto 0 auto;
    display: block;
    border: 2px solid black;
}

h1  {
    margin: 0 auto 0 auto;
    display: block;

}

